--- a/.env
+++ b/.env
@@ -10,12 +10,15 @@
 #
 
 # Default nexus home on local filesystem
+# If your local environment differs uncomment and change the required setting
 #NEXUS_COMPOSE_HOME=~/nexus
 
 # Default dockerfile used for docker-compose build
+# If your local environment differs uncomment and change the required setting
 #NEXUS_DOCKERFILE=./Dockerfile_nexus_linux-arm-v7
 
 # Default container configuration used in default docker-compose.yml
+# If your local environment differs uncomment and change the required setting
 #NEXUS_IMAGE=bsbdock/nexus
 #NEXUS_CONTAINER=nexus-server_node01
 #NEXUS_CONTAINER_ALIAS=nexus-server_node01
@@ -29,13 +32,15 @@
 #NEXUS_PORT_JSONAPI=4341
 #NEXUS_RNODE_DEVICE=/dev/ttyACM0
 
-# Default server configuration
-#NEXUS_CONFIG=
-#NEXUS_PORT=4281
-#NEXUS_ASPECT=server
-#NEXUS_ROLE={"c":"root"}
+# Default nexus server configuration
+# If your local environment differs uncomment and change the required setting
+NEXUS_CONFIG=
+NEXUS_PORT=4281
+NEXUS_ASPECT=server
+NEXUS_ROLE={"c":"root"}
 
-# My non default development configuration
+# My personal non default development configuration
+# This section can be safely removed
 #NEXUS_DOCKERFILE=./Dockerfile_nexusdev_linux-amd64
 #NEXUS_IMAGE=bsbdock/nexus:dev_linux-amd64
 #NEXUS_CONTAINER=nexus-server_dev
