--- a/.env
+++ b/.env
@@ -37,13 +37,14 @@
 NEXUS_CONFIG=
 NEXUS_PORT=4281
 NEXUS_ASPECT=server
+#HINT: No white space characters are allowed within json strings used as parameters for nexus server
 NEXUS_ROLE={"c":"root"}
+NEXUS_BRIDGE=
 
 # My personal non default development configuration
 # This section can be safely removed
 #NEXUS_DOCKERFILE=./Dockerfile_nexusdev_linux-amd64
 #NEXUS_IMAGE=bsbdock/nexus:dev_linux-amd64
-#NEXUS_CONTAINER=nexus-server_dev
 #NEXUS_CONTAINER_ALIAS=nexus-server_dev
 #NEXUS_PORT_RNSAPI=4354
 #NEXUS_PORT_WEB=4384
@@ -51,5 +52,6 @@ NEXUS_ROLE={"c":"root"}
 #NEXUS_ASPECT=dev
 #NEXUS_LONGPOLL=60
 #NEXUS_TIMEOUT=70
+#HINT: No white space characters are allowed within parameters
 #NEXUS_ROLE={"c":"root"}
-#NEXUS_BRIDGE=[{"url": "https://nexus.deltamatrix.org:8241", "tag": "server.deltamatrix"}]
+#NEXUS_BRIDGE=[{"url":"https://nexus.deltamatrix.org:8241","tag":"server.deltamatrix"}]
