--- a/.env
+++ b/.env
@@ -45,6 +45,7 @@ NEXUS_BRIDGE=
 # This section can be safely removed
 #NEXUS_DOCKERFILE=./Dockerfile_nexusdev_linux-amd64
 #NEXUS_IMAGE=bsbdock/nexus:dev_linux-amd64
+#NEXUS_CONTAINER=nexus-server_dev
 #NEXUS_CONTAINER_ALIAS=nexus-server_dev
 #NEXUS_PORT_RNSAPI=4354
 #NEXUS_PORT_WEB=4384
