--- a/.env
+++ b/.env
@@ -34,12 +34,12 @@
 
 # Default nexus server configuration
 # If your local environment differs uncomment and change the required setting
-NEXUS_CONFIG=
-NEXUS_PORT=4281
-NEXUS_ASPECT=server
+#NEXUS_CONFIG=
+#NEXUS_PORT=4281
+#NEXUS_ASPECT=server
 #HINT: No white space characters are allowed within json strings used as parameters for nexus server
-NEXUS_ROLE={"c":"root"}
-NEXUS_BRIDGE=
+#NEXUS_ROLE={"c":"root"}
+#NEXUS_BRIDGE=
 
 # My personal non default development configuration
 # This section can be safely removed
