Show RNS Config

--- a/.env
+++ b/.env
@@ -55,4 +55,4 @@
 #NEXUS_TIMEOUT=70
 #HINT: No white space characters are allowed within parameters
 #NEXUS_ROLE={"c":"root"}
-#NEXUS_BRIDGE=[{"url":"https://nexus.deltamatrix.org:8241","tag":"server.deltamatrix"}]
+#NEXUS_BRIDGE=[{"url":"https://nexus.deltamatrix.org:8241","cluster":"server.delta"}]
