--- a/bsbdock.nexus_context/Dockerfile_nexus1.3.0.2_linux-amd64
+++ b/bsbdock.nexus_context/Dockerfile_nexus1.3.0.2_linux-amd64
@@ -2,7 +2,9 @@
 # bsbdock/reticulum Dockerfile
 #
 # How to build this container:
-# docker buildx build --no-cache --tag bsbdock/nexus -f Dockerfile_nexus1.0_linux-amd64 .
+# docker build --tag bsbdock/nexus -f Dockerfile_nexus1.3.0.2_linux-amd64 .
+# docker build --tag bsbdock/nexus:1.3.0.2_linux-amd64 -f Dockerfile_nexus1.3.0.2_linux-amd64 .
+# docker push bsbdock/nexus:1.3.0.2_linux-amd64
 #
 # How to invoke a shell into this container:
 # docker run -it bsbdock/nexus bash
@@ -19,20 +21,40 @@ ENV TZ=Europe/Berlin DEBIAN_FRONTEND=noninteractive
 RUN apt-get update
 RUN apt-get install tzdata
 
-# Install python and pip3
+# Install pip3
 RUN apt -y install python3-pip
 
 # Install Reticulum stack and NomadNet messenger application
 RUN pip3 install rns lxmf nomadnet rnodeconf
 
-# Install personal helper tools
-RUN apt -y install mc
+# Install additional python packages
+RUN pip3 install requests
 
-# Expose port for Reticulum server TCP Interface (disable as default) 
+# Install personal helper tools
+RUN apt -y install mc nano
+
+# Install direwolf
+RUN apt -y install direwolf
+
+# Expose port for Reticulum server TCP Interface (disable as default)
 EXPOSE 4242
 # Expose ports for Nexus Server Web and API Interface
 EXPOSE 4280
 EXPOSE 4281
 
+# Create workdir
+RUN mkdir /bsb
+RUN mkdir /bsb/nexus_server
+
+# Pull in container start script and make it executable
+ARG CACHEBUST=0
+COPY start.sh /bsb
+RUN chmod ug+x /bsb/start.sh
+
+# Pull in NexusServer
+ARG CACHEBUST=0
+COPY nexus_server /bsb/nexus_server
+RUN chmod ug+x /bsb/nexus_server/nexus_server.py
+
 # Launch Nexus server on start
-CMD ["rnsd"]
+CMD /bsb/start.sh
