--- a/bsbdock.nexus_context/Dockerfile_nexus1.3.0.2_linux-arm-v7
+++ b/bsbdock.nexus_context/Dockerfile_nexus1.3.0.2_linux-arm-v7
@@ -2,13 +2,15 @@
 # bsbdock/reticulum Dockerfile
 #
 # How to build this container:
-# docker buildx build --no-cache --tag bsbdock/reticulum .
+# docker build --tag bsbdock/nexus -f Dockerfile_nexus1.3.0.2_linux-arm-v7 .
+# docker build --tag bsbdock/nexus:1.3.0.2_linux-arm-v7 -f Dockerfile_nexus1.3.0.2_linux-arm-v7 .
+# docker push bsbdock/nexus:1.3.0.2_linux-arm-v7
 #
 # How to invoke a shell into this container:
-# docker run -it bsbdock/reticulum bash
+# docker run -it bsbdock/nexus bash
 #
 # How to run the reticulum stack as a service
-# docker run --rm --name reticulum-prod_rnsd -it bsbdock/reticulum
+# docker run --rm --name nexus-prod_nexus -it bsbdock/nexus
 #
 FROM python:3.9
 
@@ -37,11 +39,34 @@ RUN pip3 install cryptography
 # Install Reticulum stack and NomadNet messenger application
 RUN pip3 install rns lxmf nomadnet rnodeconf
 
+# Install additional python packages
+RUN pip3 install requests
+
 # Install personal helper tools
-RUN apt -y install mc
+RUN apt -y install mc nano
+
+# Install direwolf
+RUN apt -y install direwolf
 
 # Expose port for Reticulum server TCP Interface (disable as default)
 EXPOSE 4242
+# Expose ports for Nexus Server Web and API Interface
+EXPOSE 4280
+EXPOSE 4281
 
-# Launch Reticulum service if not specified otherwise
-CMD ["rnsd"]
+# Create workdir
+RUN mkdir /bsb
+RUN mkdir /bsb/nexus_server
+
+# Pull in container start script and make it executable
+ARG CACHEBUST=0
+COPY start.sh /bsb
+RUN chmod ug+x /bsb/start.sh
+
+# Pull in NexusServer script
+ARG CACHEBUST=0
+COPY nexus_server /bsb/nexus_server
+RUN chmod ug+x /bsb/nexus_server/nexus_server.py
+
+# Launch Nexus server on start
+CMD /bsb/start.sh
