--- a/nexus_root/.reticulum/config
+++ b/nexus_root/.reticulum/config
@@ -35,7 +35,7 @@
     txpower = 7
     spreadingfactor = 7
     codingrate = 5
-    id_callsign = DD8SB-0
+    id_callsign = NO1CLL
     id_interval = 600
     flow_control = False
 
