--- a/.env
+++ b/.env
@@ -43,6 +43,7 @@
 
 # My personal non default development configuration
 # This section can be safely removed
+#NEXUS_COMPOSE_HOME=~/nexus_cockpit
 #NEXUS_DOCKERFILE=./Dockerfile_nexusdev_linux-amd64
 #NEXUS_IMAGE=bsbdock/nexus:dev_linux-amd64
 #NEXUS_CONTAINER=nexus-cockpit
