Check app data when announce comes in

--- a/.env
+++ b/.env
@@ -54,5 +54,5 @@
 #NEXUS_ASPECT=dev
 #NEXUS_LONGPOLL=60
 #NEXUS_TIMEOUT=70
-#NEXUS_ROLE={"c":"root"}
+#NEXUS_ROLE={"c":"cockpit"}
 #NEXUS_BRIDGE=[{"url":"https://nexus.deltamatrix.org:8241","cluster":"server.delta"}]
