--- a/.env
+++ b/.env
@@ -51,7 +51,7 @@
 #NEXUS_PORT_RNSAPI=4255
 #NEXUS_PORT_WEB=127.0.0.1:4285
 #NEXUS_PORT_JSONAPI=127.0.0.1:4385
-#NEXUS_ASPECT=dev
+#NEXUS_ASPECT=cockpit
 #NEXUS_LONGPOLL=60
 #NEXUS_TIMEOUT=70
 #NEXUS_ROLE={"c":"cockpit"}
