--- a/.env
+++ b/.env
@@ -31,6 +31,7 @@
 #NEXUS_PORT_JSONAPI=127.0.0.1:4281
 #NEXUS_PORT_JSONAPI=4281
 #NEXUS_RNODE_DEVICE=/dev/ttyACM0
+#NEXUS_COMMAND=/bsb/start.sh
 
 # Default nexus server configuration
 # If your local environment differs uncomment and change the required setting
