Recomposition of Nexus

--- a/.env
+++ b/.env
@@ -39,8 +39,7 @@
 #NEXUS_PORT=4281
 #NEXUS_ASPECT=server
 #HINT: No white space characters are allowed within json strings used as parameters for nexus server
-#NEXUS_ROLE={"c":"root"}
-#NEXUS_BRIDGE=
+#NEXUS_ROLE={"c":"home"}
 
 # My personal non default development configuration
 # This section can be safely removed
@@ -56,4 +55,4 @@
 #NEXUS_LONGPOLL=60
 #NEXUS_TIMEOUT=70
 #NEXUS_ROLE={"c":"cockpit"}
-#NEXUS_BRIDGE=[{"url":"https://nexus.deltamatrix.org:8241","cluster":"server.delta"}]
+#NEXUS_BRIDGE=[{"url":"https://nexus.deltamatrix.org:8241","cluster":"home.delta"}]
