Recomposition of Nexus

--- a/.env
+++ b/.env
@@ -37,7 +37,7 @@
 # If your local environment differs uncomment and change the required setting
 #NEXUS_CONFIG=
 #NEXUS_PORT=4281
-#NEXUS_ASPECT=server
+#NEXUS_ASPECT=home
 #HINT: No white space characters are allowed within json strings used as parameters for nexus server
 #NEXUS_ROLE={"c":"home"}
 
@@ -50,7 +50,7 @@
 #NEXUS_CONTAINER_ALIAS=nexus-cockpit
 #NEXUS_PORT_RNSAPI=4255
 #NEXUS_PORT_WEB=127.0.0.1:4285
-#NEXUS_PORT_JSONAPI=127.0.0.1:4385
+#NEXUS_PORT_JSONAPI=127.0.0.1:4345
 #NEXUS_ASPECT=cockpit
 #NEXUS_LONGPOLL=60
 #NEXUS_TIMEOUT=70
