--- a/bsbdock.nexus_context/Dockerfile_nexus1.3.0.1_linux-amd64
+++ b/bsbdock.nexus_context/Dockerfile_nexus1.3.0.1_linux-amd64
@@ -33,6 +33,9 @@ RUN pip3 install requests
 # Install personal helper tools
 RUN apt -y install mc nano
 
+# Install direwolf
+RUN apt -y install direwolf
+
 # Expose port for Reticulum server TCP Interface (disable as default) 
 EXPOSE 4242
 # Expose ports for Nexus Server Web and API Interface
