--- a/bsbdock.nexus_context/Dockerfile_nexus1.3.0.3_linux-arm-v7
+++ b/bsbdock.nexus_context/Dockerfile_nexus1.3.0.3_linux-arm-v7
@@ -2,9 +2,9 @@
 # bsbdock/reticulum Dockerfile
 #
 # How to build this container:
-# docker build --tag bsbdock/nexus -f Dockerfile_nexus1.3.0.3_linux-amd64 .
-# docker build --tag bsbdock/nexus:1.3.0.3_linux-amd64 -f Dockerfile_nexus1.3.0.3_linux-amd64 .
-# docker push bsbdock/nexus:1.3.0.3_linux-amd64
+# docker build --tag bsbdock/nexus -f Dockerfile_nexus1.3.0.3_linux-arm-v7 .
+# docker build --tag bsbdock/nexus:1.3.0.31_linux-arm-v7 -f Dockerfile_nexus1.3.0.3_linux-arm-v7 .
+# docker push bsbdock/nexus:1.3.0.3_linux-arm-v7
 #
 # How to invoke a shell into this container:
 # docker run -it bsbdock/nexus bash
@@ -24,6 +24,17 @@ RUN apt-get install tzdata
 # Install pip3
 RUN apt -y install python3-pip
 RUN pip install --upgrade pip
+
+# Build essentials
+RUN apt -y install build-essential libssl-dev libffi-dev python-dev-is-python3 python2-dev python2
+
+# Install rust
+RUN apt -y install curl
+RUN curl https://sh.rustup.rs -sSf -y1 | sh  -s -- -y --profile minimal --default-toolchain nightly
+ENV PATH="/root/.cargo/bin:$PATH"
+
+# Build/Install cryptography
+RUN pip3 install cryptography
 
 # Install Reticulum stack and NomadNet messenger application
 RUN pip3 install rns lxmf nomadnet rnodeconf
@@ -52,7 +63,7 @@ ARG CACHEBUST=0
 COPY start.sh /bsb
 RUN chmod ug+x /bsb/start.sh
 
-# Pull in NexusServer
+# Pull in NexusServer script
 ARG CACHEBUST=0
 COPY nexus_server /bsb/nexus_server
 RUN chmod ug+x /bsb/nexus_server/nexus_server.py
