--- a/.env
+++ b/.env
@@ -48,6 +48,7 @@
 #NEXUS_IMAGE=bsbdock/nexus:dev_linux-amd64
 #NEXUS_CONTAINER=nexus-cockpit
 #NEXUS_CONTAINER_ALIAS=nexus-cockpit
+#NEXUS_NETWORK=nexus-cockpit_net
 #NEXUS_PORT_RNSAPI=4255
 #NEXUS_PORT_WEB=127.0.0.1:4285
 #NEXUS_PORT_JSONAPI=127.0.0.1:4345
