--- a/.env
+++ b/.env
@@ -2,12 +2,12 @@
 # Environment used by docker-compose
 #
 # git clone https://github.com/HarlekinSimplex/nexus.git
-# docker run --rm -it --name nexus-server_node01 -p 127.0.0.1:4341:4281 -v "$(pwd)"/nexus_root:/root bsbdock/nexus python3 /bsb/nexus_server/NexusServer.py
-# docker run --rm -it --name nexus-server_node01 -p 127.0.0.1:4341:4281 -v "$(pwd)"/nexus_root:/root bsbdock/nexus:dev_linux-amd64 python3 /bsb/nexus_server/NexusServer.py
+# docker run --rm -it --name nexus-server_node01 -p 127.0.0.1:4341:4281 -v "$(pwd)"/nexus_root:/root bsbdock/nexus python3 /bsb/nexus_server/nexus_server.py
+# docker run --rm -it --name nexus-server_node01 -p 127.0.0.1:4341:4281 -v "$(pwd)"/nexus_root:/root bsbdock/nexus:dev_linux-amd64 python3 /bsb/nexus_server/nexus_server.py
 # docker exec -it nexus-server_node01 bash
 # docker exec -it nexus-server_node01 nomadnet
-# docker exec -it nexus-server_node01 python3 /bsb/nexus_server/NexusServer.py
-#
+# docker exec -it nexus-server_node01 python3 /bsb/nexus_server/nexus_server.py
+# python3 ~/nexus/bsbdock.nexus_context/nexus_server/nexus_server.py
 
 # Default nexus home on local filesystem
 # If your local environment differs uncomment and change the required setting
