--- a/nexus_root/.nomadnetwork/config
+++ b/nexus_root/.nomadnetwork/config
@@ -1,6 +1,6 @@
 [logging]
 # Valid log levels are 0 through 7:
-  loglevel = 5
+  loglevel = 4
   destination = file
 
 [client]
@@ -21,6 +21,6 @@
 
 [node]
   enable_node = yes
-  node_name = Nexus Server [01]
+  node_name = BSB.NexusServer [01]
   announce_interval = 360
   announce_at_start = Yes
