--- a/.env
+++ b/.env
@@ -55,5 +55,5 @@
 #NEXUS_ASPECT=cockpit
 #NEXUS_LONGPOLL=60
 #NEXUS_TIMEOUT=70
-#NEXUS_ROLE={"c":"cockpit"}
+#NEXUS_ROLE={"cluster":"cockpit"}
 #NEXUS_BRIDGE=[{"url":"https://nexus.deltamatrix.org:8244","cluster":"cockpit.dev"}]
