--- a/.env
+++ b/.env
@@ -56,4 +56,4 @@
 #NEXUS_LONGPOLL=60
 #NEXUS_TIMEOUT=70
 #NEXUS_ROLE={"cluster":"cockpit"}
-#NEXUS_BRIDGE=[{"url":"https://nexus.deltamatrix.org:8244","cluster":"cockpit.dev"}]
+#NEXUS_BRIDGE=[{"url":"https://nexus.deltamatrix.org:8244","cluster":"dev"}]
