--- a/.env
+++ b/.env
@@ -39,7 +39,7 @@
 #NEXUS_PORT=4281
 #NEXUS_ASPECT=home
 #HINT: No white space characters are allowed within json strings used as parameters for nexus server
-#NEXUS_ROLE={"c":"home"}
+#NEXUS_ROLE={"cluster":"home"}
 
 # My personal non default development configuration
 # This section can be safely removed
