--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -84,7 +84,7 @@ services:
   nexus_watchtower:
     image: containrrr/watchtower
     environment:
-      WATCHTOWER_LABEL_ENABLE: true
+      WATCHTOWER_LABEL_ENABLE: "true"
       WATCHTOWER_POLL_INTERVAL: 900
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
