--- a/.env
+++ b/.env
@@ -22,6 +22,7 @@
 #NEXUS_IMAGE=bsbdock/nexus
 #NEXUS_CONTAINER=nexus-server_node01
 #NEXUS_CONTAINER_ALIAS=nexus-server_node01
+#NEXUS_WATCHTOWER=nexus-server_watchtower
 #NEXUS_NETWORK=nexus-server_net
 #NEXUS_ROOT=/root
 #NEXUS_ROOT_BIND=nexus_root
