--- a/bsbdock.nexus_context/Dockerfile_nexusdev_linux-amd64
+++ b/bsbdock.nexus_context/Dockerfile_nexusdev_linux-amd64
@@ -57,7 +57,8 @@ RUN chmod ug+x /bsb/start.sh
 
 # Pull in NexusServer
 COPY nexus_server /bsb/nexus_server
-RUN chmod ug+x /bsb/nexus_server/nexus_server.py
+RUN rm /etc/nginx/sites-enabled/default
+RUM ln -s /bsb/nexus_server/nexus.nginx.conf /etc/nginx/sites-enabled/nexus.nginx.conf
 
 # Pull in NexusWeb
 ARG CACHEBUST=0
