--- a/bsbdock.nexus_context/Dockerfile_nexus1.4.0.2_linux-amd64
+++ b/bsbdock.nexus_context/Dockerfile_nexus1.4.0.2_linux-amd64
@@ -1,17 +1,6 @@
 ############################################################
 # bsbdock/reticulum Dockerfile
 #
-# How to build this container:
-# docker build --tag bsbdock/nexus -f Dockerfile_nexus1.3.0.2_linux-amd64 .
-# docker build --tag bsbdock/nexus:1.3.0.2_linux-amd64 -f Dockerfile_nexus1.3.0.2_linux-amd64 .
-# docker push bsbdock/nexus:1.3.0.2_linux-amd64
-#
-# How to invoke a shell into this container:
-# docker run -it bsbdock/nexus bash
-#
-# How to run the reticulum stack as a service
-# docker run --rm --name nexus-prod_nexus -it bsbdock/nexus
-#
 FROM python:3.9
 
 # Set timezone and interactive mode
@@ -21,8 +10,15 @@ ENV TZ=Europe/Berlin DEBIAN_FRONTEND=noninteractive
 RUN apt-get update
 RUN apt-get install tzdata
 
+# Install personal helper tools
+RUN apt -y install mc nano vim screen systemctl nginx
+
+# Install direwolf
+RUN apt -y install direwolf
+
 # Install pip3
 RUN apt -y install python3-pip
+RUN pip install --upgrade pip
 
 # Install Reticulum stack and NomadNet messenger application
 RUN pip3 install rns lxmf nomadnet rnodeconf
@@ -30,11 +26,8 @@ RUN pip3 install rns lxmf nomadnet rnodeconf
 # Install additional python packages
 RUN pip3 install requests
 
-# Install personal helper tools
-RUN apt -y install mc nano
-
-# Install direwolf
-RUN apt -y install direwolf
+# Install Django
+RUN pip3 install Django==4.0.4
 
 # Expose port for Reticulum server TCP Interface (disable as default)
 EXPOSE 4242
@@ -42,19 +35,23 @@ EXPOSE 4242
 EXPOSE 4280
 EXPOSE 4281
 
-# Create workdir
+# Create Directories
+ARG CACHEBUST=0
 RUN mkdir /bsb
 RUN mkdir /bsb/nexus_server
+RUN mkdir /bsb/nexus_web
 
 # Pull in container start script and make it executable
-ARG CACHEBUST=0
 COPY start.sh /bsb
 RUN chmod ug+x /bsb/start.sh
 
 # Pull in NexusServer
-ARG CACHEBUST=0
 COPY nexus_server /bsb/nexus_server
-RUN chmod ug+x /bsb/nexus_server/nexus_server.py
+
+# Pull in NexusWeb
+COPY nexus_web /bsb/nexus_web
+RUN rm /etc/nginx/sites-enabled/default
+RUN ln -s /bsb/nexus_server/nexus.nginx.conf /etc/nginx/sites-enabled/nexus.nginx.conf
 
 # Launch Nexus server on start
 CMD /bsb/start.sh
