--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -82,6 +82,8 @@ services:
 #################################################
 # BSB.NexusServer automatic update service
   nexus_watchtower:
+    profiles:
+      - auto-update
     container_name: ${NEXUS_WATCHTOWER:-nexus-watchtower}
     image: containrrr/watchtower
     environment:
