--- a/.env
+++ b/.env
@@ -13,6 +13,9 @@
 # If your local environment differs uncomment and change the required setting
 #NEXUS_COMPOSE_HOME=~/nexus
 
+# Uncomment that variable if you want to enable auto-update of the nexus container by watchtower
+#COMPOSE_PROFILES=auto-update
+
 # Default dockerfile used for docker-compose build
 # If your local environment differs uncomment and change the required setting
 #NEXUS_DOCKERFILE=./Dockerfile_nexus_linux-arm-v7
