--- a/.env
+++ b/.env
@@ -13,7 +13,7 @@
 # If your local environment differs uncomment and change the required setting
 #NEXUS_COMPOSE_HOME=~/nexus
 
-# Uncomment that variable if you want to enable auto-update of the nexus container by watchtower
+# Uncomment this variable if you want to enable auto-update of the nexus container by watchtower
 #COMPOSE_PROFILES=auto-update
 
 # Default dockerfile used for docker-compose build
@@ -47,6 +47,7 @@
 
 # My personal non default development configuration
 # This section can be safely removed
+#COMPOSE_PROFILES=auto-update
 #NEXUS_COMPOSE_HOME=~/nexus_cockpit
 #NEXUS_DOCKERFILE=./Dockerfile_nexusdev_linux-amd64
 #NEXUS_IMAGE=bsbdock/nexus:dev_linux-amd64
