--- a/.env
+++ b/.env
@@ -19,6 +19,8 @@
 # Default dockerfile used for docker-compose build
 # If your local environment differs uncomment and change the required setting
 #NEXUS_DOCKERFILE=./Dockerfile_nexus_linux-arm-v7
+#NEXUS_DOCKERFILE=./Dockerfile_nexus_linux-arm64
+#NEXUS_DOCKERFILE=./Dockerfile_nexus_linux-amd64
 
 # Default container configuration used in default docker-compose.yml
 # If your local environment differs uncomment and change the required setting
