--- a/bsbdock.nexus_context/nexus_server/nexus.nginx.conf
+++ b/bsbdock.nexus_context/nexus_server/nexus.nginx.conf
@@ -1,3 +1,5 @@
+# Virtual Host configuration for Nexus Web Client inside the container listening on port 4280 (http)
+
 server {
 	listen 4280 default_server;
 	listen [::]:4280 default_server;
@@ -8,22 +10,3 @@ server {
 		try_files $uri $uri/ =404;
 	}
 }
-
-# Virtual Host configuration for example.com
-#
-# You can move that to a different file under sites-available/ and symlink that
-# to sites-enabled/ to enable it.
-#
-#server {
-#	listen 80;
-#	listen [::]:80;
-#
-#	server_name example.com;
-#
-#	root /var/www/example.com;
-#	index index.html;
-#
-#	location / {
-#		try_files $uri $uri/ =404;
-#	}
-#}
