--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,7 +6,7 @@
 # | |_) |____) | |_) || |\  |  __/>  <| |_| \__ \____) |  __/ |   \ V /  __/ |
 # |____/|_____/|____(_)_| \_|\___/_/\_\\__,_|___/_____/ \___|_|    \_/ \___|_|
 #
-# Copyright (c) 2020 Stephan Becker / Becker-Systemberatung, MIT License
+# Copyright (c) 2022 Stephan Becker / Becker-Systemberatung, MIT License
 #
 # Permission is hereby granted, free of charge, to any person obtaining a copy of this
 # software and associated documentation files (the "Software"), to deal in the Software
@@ -77,7 +77,7 @@ services:
         max-size: "200k"
         max-file: "10"
     labels:
-      - "com.centurylinklabs.watchtower.enable=true"
+      - "com.centurylinklabs.watchtower.enable=1"
 
 #################################################
 # BSB.NexusServer automatic update service
