--- a/.env
+++ b/.env
@@ -18,7 +18,7 @@
 #WATCHTOWER_POLL_INTERVAL=43200
 #NEXUS_WATCHTOWER=nexus-watchtower
 
-# Default dockerfile used for docker-compose build
+# Default dockerfile used for docker-compose build is Dockerfile_nexus_linux-arm
 # If your local environment differs uncomment and change the required setting
 #NEXUS_DOCKERFILE=./Dockerfile_nexus_linux-arm
 #NEXUS_DOCKERFILE=./Dockerfile_nexus_linux-arm64
@@ -52,12 +52,17 @@
 # This section can be safely removed
 #NEXUS_RNODE_DEVICE=/dev/ttyACM0
 #COMPOSE_PROFILES=auto-update
+#WATCHTOWER_POLL_INTERVAL=300
+#NEXUS_WATCHTOWER=nexus-watchtower_cockpit
+
+# My personal default development configuration
+# This section can be safely removed
+# Configuration for Cockpit Dev Environment
 #NEXUS_COMPOSE_HOME=~/nexus_cockpit
 #NEXUS_DOCKERFILE=./Dockerfile_nexusdev_linux-amd64
 #NEXUS_IMAGE=bsbdock/nexus:dev_linux-amd64
 #NEXUS_CONTAINER=nexus-cockpit
 #NEXUS_CONTAINER_ALIAS=nexus-cockpit
-#NEXUS_WATCHTOWER=nexus-watchtower_cockpit
 #NEXUS_NETWORK=nexus-cockpit_net
 #NEXUS_PORT_RNSAPI=4255
 #NEXUS_PORT_WEB=127.0.0.1:4285
