--- a/.env
+++ b/.env
@@ -72,3 +72,4 @@
 #NEXUS_TIMEOUT=70
 #NEXUS_ROLE={"cluster":"cockpit"}
 #NEXUS_BRIDGE=[{"url":"https://nexus.deltamatrix.org:8244","cluster":"dev"}]
+#NEXUS_COMMAND=bash
