--- a/bsbdock.nexus_context/Dockerfile_nexusdev_linux-amd64
+++ b/bsbdock.nexus_context/Dockerfile_nexusdev_linux-amd64
@@ -35,6 +35,9 @@ RUN pip install --upgrade pip
 # Install personal helper tools
 RUN apt -y install mc nano vim screen
 
+# Install required python packages
+RUN pip install -r requirements.txt
+
 # Install Reticulum stack and NomadNet messenger application
 #RUN pip3 install rns lxmf nomadnet rnodeconf
 # Install additional python packages
