--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -47,7 +47,7 @@ services:
       dockerfile: ${NEXUS_DOCKERFILE:-./Dockerfile_nexus_linux-arm}
 
     restart: unless-stopped
-    command: ${NEXUS_COMMAND:-start.sh}
+    command: ${NEXUS_COMMAND:-/bsb/start.sh}
     ports:
 # Port for the reticulum server API for reticulum client access if required
 # Can be set to 127.0.0.1:4242:4242 to permit access other than from localhost
